--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/header_lottie"
             android:layout_width="0dp"
-            android:layout_height="328dp"
+            android:layout_height="@dimen/_280sdp"
             android:background="@color/primary__color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_bold"
             android:text="Welcome to Twaddle"
-            android:textSize="30dp"
+            android:textSize="@dimen/_20sdp"
             android:textStyle="bold"
             style="@style/text__color"
             android:layout_marginTop="40dp"
@@ -57,11 +57,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/nunito_regular"
-            android:paddingHorizontal="25dp"
+            android:paddingHorizontal="@dimen/_18sdp"
             android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
             android:textAlignment="center"
             style="@style/text__color"
-            android:textSize="16dp"
+            android:textSize="@dimen/_12ssp"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,17 +70,17 @@
         <Button
             android:id="@+id/start"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="@dimen/_40sdp"
             android:text="Start"
             android:fontFamily="@font/nunito_medium"
-            android:textSize="16dp"
+            android:textSize="@dimen/_12ssp"
             android:textColor="@color/white"
             android:textAllCaps="false"
             android:backgroundTint="@color/primary__color"
             android:clipToOutline="true"
             android:elevation="10dp"
             android:layout_marginTop="80dp"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="@dimen/_18sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
