--- a/app/src/main/res/drawable/empty_divider.xml
+++ b/app/src/main/res/drawable/empty_divider.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#191919"/>
-    <corners android:radius="@dimen/_20sdp"/>
+    <size
+        android:height="10dp"
+        android:width="10dp"/>
 </shape>
