--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/header_lottie"
             android:layout_width="0dp"
-            android:layout_height="323dp"
+            android:layout_height="@dimen/_280sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -25,8 +25,8 @@
             app:lottie_loop="true"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
-            android:layout_width="63dp"
-            android:layout_height="62dp"
+            android:layout_width="@dimen/_48sdp"
+            android:layout_height="@dimen/_48sdp"
             android:layout_marginStart="25dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/primary__color"
@@ -35,7 +35,7 @@
             android:clipToOutline="true"
             android:elevation="10dp"
             android:src="@drawable/arrow_back"
-            app:fabCustomSize="60dp"
+            app:fabCustomSize="@dimen/_48sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/fab_3_rounded" />
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_bold"
             android:text="Sign Up"
-            android:textSize="30dp"
+            android:textSize="@dimen/_20sdp"
             android:textStyle="bold"
             style="@style/text__color"
             android:layout_marginTop="0dp"
@@ -87,92 +87,92 @@
                 android:id="@+id/email"
                 style="@style/input__bg"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginHorizontal="25dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="30dp"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:paddingHorizontal="24.5dp"
+                android:paddingHorizontal="@dimen/_12ssp"
                 android:paddingVertical="12.5dp"
                 android:textColorHint="@color/primary__color"
-                android:textSize="16dp" />
+                android:textSize="@dimen/_11ssp" />
             <EditText
                 android:id="@+id/fullName"
                 style="@style/input__bg"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginHorizontal="25dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="30dp"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Full Name"
                 android:inputType="textPersonName"
-                android:paddingHorizontal="24.5dp"
+                android:paddingHorizontal="@dimen/_12ssp"
                 android:paddingVertical="12.5dp"
                 android:textColorHint="@color/primary__color"
-                android:textSize="16dp" />
+                android:textSize="@dimen/_11ssp" />
             <EditText
                 android:id="@+id/nickName"
                 style="@style/input__bg"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginHorizontal="25dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="30dp"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Nick Name"
                 android:inputType="text"
-                android:paddingHorizontal="24.5dp"
+                android:paddingHorizontal="@dimen/_12ssp"
                 android:paddingVertical="12.5dp"
                 android:textColorHint="@color/primary__color"
-                android:textSize="16dp" />
+                android:textSize="@dimen/_11ssp" />
             <EditText
                 android:id="@+id/phoneNumber"
                 style="@style/input__bg"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginHorizontal="25dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="30dp"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Phone Number"
                 android:inputType="phone"
-                android:paddingHorizontal="24.5dp"
+                android:paddingHorizontal="@dimen/_12ssp"
                 android:paddingVertical="12.5dp"
                 android:textColorHint="@color/primary__color"
-                android:textSize="16dp" />
+                android:textSize="@dimen/_11ssp" />
             <EditText
                 android:id="@+id/password"
                 style="@style/input__bg"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginHorizontal="25dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginHorizontal="@dimen/_18ssp"
                 android:layout_marginTop="30dp"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:paddingHorizontal="24.5dp"
+                android:paddingHorizontal="@dimen/_12ssp"
                 android:paddingVertical="12.5dp"
                 android:textColorHint="@color/primary__color"
-                android:textSize="16dp" />
+                android:textSize="@dimen/_11ssp" />
             <EditText
                 android:id="@+id/passwordConfirm"
                 style="@style/input__bg"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginHorizontal="25dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginHorizontal="@dimen/_18ssp"
                 android:layout_marginTop="30dp"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Password Confirm"
                 android:inputType="textPassword"
-                android:paddingHorizontal="24.5dp"
+                android:paddingHorizontal="@dimen/_12ssp"
                 android:paddingVertical="12.5dp"
                 android:textColorHint="@color/primary__color"
-                android:textSize="16dp" />
+                android:textSize="@dimen/_11ssp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -181,8 +181,8 @@
                 <Button
                     android:id="@+id/sign_up"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginHorizontal="25dp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_marginHorizontal="@dimen/_18sdp"
                     android:layout_marginTop="20dp"
                     android:backgroundTint="@color/primary__color"
                     android:clipToOutline="true"
@@ -191,7 +191,7 @@
                     android:text="Sign Up"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="16dp"
+                    android:textSize="@dimen/_12ssp"
                     />
                 <ProgressBar
                     android:id="@+id/progressBar"
@@ -219,7 +219,7 @@
                 android:fontFamily="@font/nunito_regular"
                 android:text="Already have an account?"
                 android:textColor="#7A7A7A"
-                android:textSize="16dp" />
+                android:textSize="@dimen/_12ssp" />
 
             <TextView
                 android:id="@+id/sign_in"
@@ -228,7 +228,7 @@
                 android:fontFamily="@font/nunito_bold"
                 android:text=" Sign in"
                 style="@style/text__color"
-                android:textSize="16dp"
+                android:textSize="@dimen/_12ssp"
                 android:textStyle="bold" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
