--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
                 android:layout_marginLeft="20dp"
                 android:text="Moments"
                 style="@style/text__color"
-                android:textSize="22dp" />
+                android:textSize="@dimen/_12ssp" />
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -34,38 +34,38 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="@dimen/_45sdp"
+                        android:layout_height="@dimen/_45sdp"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/image1"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="@dimen/_45sdp"
+                        android:layout_height="@dimen/_45sdp"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/image1"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="@dimen/_45sdp"
+                        android:layout_height="@dimen/_45sdp"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/image1"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="@dimen/_45sdp"
+                        android:layout_height="@dimen/_45sdp"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/image1"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="@dimen/_45sdp"
+                        android:layout_height="@dimen/_45sdp"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/image1"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="@dimen/_45sdp"
+                        android:layout_height="@dimen/_45sdp"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/image1"/>
                     <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
+                        android:layout_width="@dimen/_45sdp"
+                        android:layout_height="@dimen/_45sdp"
                         android:layout_marginLeft="20dp"
                         android:src="@drawable/image1"/>
                 </LinearLayout>
@@ -84,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_semibold"
                     android:text="Latest Posts"
-                    android:textSize="22dp"
+                    android:textSize="@dimen/_12ssp"
                     style="@style/text__color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -101,18 +101,18 @@
             <EditText
                 android:id="@+id/editText"
                 android:layout_width="match_parent"
-                android:layout_height="47dp"
-                android:layout_marginHorizontal="20dp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="25dp"
                 style="@style/input__bg"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Search"
                 android:inputType="textEmailAddress"
-                android:paddingHorizontal="23dp"
+                android:paddingHorizontal="@dimen/_12ssp"
                 android:paddingVertical="13dp"
                 android:textColorHint="@color/primary__color"
-                android:textSize="16dp"
+                android:textSize="@dimen/_11ssp"
                 android:drawableEnd="@drawable/baseline_search_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -120,8 +120,8 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                app:cardCornerRadius="25dp"
+                android:layout_marginHorizontal="@dimen/_18sdp"
+                app:cardCornerRadius="@dimen/_20sdp"
                 app:contentPadding="20dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -141,8 +141,8 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
+                            android:layout_width="@dimen/_38sdp"
+                            android:layout_height="@dimen/_38sdp"
                             android:src="@drawable/image1" />
                         <TextView
                             android:layout_width="wrap_content"
@@ -152,7 +152,7 @@
                             android:fontFamily="@font/nunito_medium"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
-                            android:textSize="17dp"/>
+                            android:textSize="@dimen/_12ssp"/>
 
                     </LinearLayout>
                     <com.google.android.material.divider.MaterialDivider
@@ -174,12 +174,12 @@
                         android:layout_marginTop="10dp"
                         android:orientation="horizontal">
                         <ImageView
-                            android:layout_width="26dp"
-                            android:layout_height="24dp"
+                            android:layout_width="@dimen/_18sdp"
+                            android:layout_height="@dimen/_18sdp"
                             android:src="@drawable/like"/>
                         <ImageView
-                            android:layout_width="23dp"
-                            android:layout_height="23dp"
+                            android:layout_width="@dimen/_18sdp"
+                            android:layout_height="@dimen/_18sdp"
                             android:layout_marginLeft="15dp"
                             android:src="@drawable/comment"/>
                     </LinearLayout>
@@ -188,7 +188,7 @@
                         android:layout_height="wrap_content"
                         android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry...."
                         android:fontFamily="@font/nunito_regular"
-                        android:textSize="14sp"
+                        android:textSize="@dimen/_11ssp"
                         android:layout_marginTop="10dp"
                         style="@style/text__color"/>
                     <TextView
@@ -197,7 +197,7 @@
                         android:text="more"
                         android:fontFamily="@font/nunito_regular"
                         android:textColor="#8d8d8d"
-                        android:textSize="14sp"/>
+                        android:textSize="@dimen/_11ssp"/>
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
